- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.0.0, 5.3.2
- 
    None
- 
    OS X Lion, Xcode 4.2.1, clang 3.0
- 
        
- 
        906577c8b0045724b9b961926085e933c8e0d339
FAIL!  : tst_QTreeView::editTriggers(EditKeyPressed 4) Compared values are not the same
   Actual (qFindChild<QLineEdit *>(&view, QString()) != 0): 0
   Expected (editorOpened): 1
   Loc: [tst_qtreeview.cpp(844)]
- is required for
- 
                    QTBUG-24131 Autotests for Qt 5.0 on OSX -         
- Closed
 
-