Enter/Return should cause an edit inside an itemview on OS X

This was available before but was protected with the wrong define for OS
X, so this is changed to the right define.

Task-number: QTBUG-23696
             QTBUG-23703
Change-Id: I669a6cf2ff7c01020693adff9f04a4b8b9404d02
Reviewed-by: David Faure <david.faure@kdab.com>

cregit: 906577c8b0045724b9b961926085e933c8e0d339 https://github.com/qt/qtbase/commit/906577c8b0045724b9b961926085e933c8e0d339